--- a/Radix/src/app/shared/app.component.html
+++ b/Radix/src/app/shared/app.component.html
@@ -1,156 +1,3 @@
-<button data-drawer-target="sidebar-multi-level-sidebar" data-drawer-toggle="sidebar-multi-level-sidebar" aria-controls="sidebar-multi-level-sidebar" type="button" class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
-  <span class="sr-only">Open sidebar</span>
-  <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-    <path clip-rule="evenodd" fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
-  </svg>
-</button>
-
-<aside id="sidebar-multi-level-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidebar">
-  <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-800">
-    <div class="user-profile text-center">
-      <div class="w-32 h-32 rounded-full m-auto mt-16 border-2 border-white bg-white shadow-lg">
-        <img src="assets/img.jpg" alt="user" class="w-32 h-32 rounded-full">
-      </div>
-      <div class="text-gray-800 mt-8">
-        Hoooly Hack
-        <span class="inline-block align-text-bottom">
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" class="w-4 h-4"><path d="M19 9l-7 7-7-7"></path></svg></span>
-      </div>
-    </div>
-    <ul class="space-y-2 font-medium">
-      <li>
-        <a href="#" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" class="w-4 h-4"><path d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
-          <span class="ms-3">Home</span>
-        </a>
-      </li>
-      <li>
-        <a href="#" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" class="w-4 h-4"><path d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path></svg>
-          <span class="flex-1 ms-3 text-left rtl:text-right whitespace-nowrap">Chat</span>
-        </a>
-      </li>
-      <li>
-        <a href="#" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" class="w-4 h-4"><path d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"></path><path d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
-          <span class="flex-1 ms-3 whitespace-nowrap">Settings</span>
-        </a>
-      </li>
-    </ul>
-  </div>
-</aside>
-
-<div class="p-4 sm:ml-64">
-  <div class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700">
-    <div class="grid grid-cols-2 gap-4 mb-4">
-      <!--Chat and search function-->
-      <div class="flex items-center justify-start h-24 rounded bg-gray-50 dark:bg-gray-800">
-        <div class="w-full">
-          <h1 class="text-3xl text-gray-700">Chat</h1>
-          <input type="text" class="outline-none  w-full bg-transparent border-b-2 border-gray-200" placeholder="Search">
-        </div>
-      </div>
-      <!--Status bubble -->
-      <div class="flex items-center justify-center h-24 rounded bg-gray-50 dark:bg-gray-800">
-        <span class="inline-block text-gray-700">
-          Status: <span class="inline-block align-text-bottom w-4 h-4 bg-green-400 rounded-full border-2 border-white"></span> <b>Online</b>
-          <span class="inline-block align-text-bottom">
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" class="w-4 h-4"><path d="M19 9l-7 7-7-7"></path></svg>
-          </span>
-        </span>
-        <span class="inline-block ml-8 text-gray-700 hover:text-gray-900 align-bottom">
-          <span class="block h-6 w-6 p-1 rounded-full hover:bg-gray-400">
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" class="w-4 h-4"><path d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path></svg>
-          </span>
-        </span>
-      </div>
-    </div>
-      <div class="grid grid-cols-3 mb-4 gap-4">
-        <!--Chat bubble thing-->
-        <div class="flex flex-col w-full h-300 overflow-y-auto items-start justify-start rounded bg-white dark:bg-green-400">
-          <div class="w-full">
-            <div class="entry cursor-pointer bg-white mb-4 rounded  flex shadow-md border-l-4 border-green-500">
-              <div class="flex-2">
-                <div class="w-12 h-12 relative">
-                  <img class="w-12 h-12 rounded-full mx-auto" src="assets/img.jpg" alt="chat-user" />
-                  <span class="absolute w-4 h-4 bg-gray-400 rounded-full right-0 bottom-0 border-2 border-white"></span>
-                </div>
-              </div>
-              <div class="flex-1 px-2">
-                <div class="truncate w-32"><span class="text-gray-800">Team_17_Holy_Hack</span></div>
-                <div><small class="text-gray-600">Yea, Sure!</small></div>
-              </div>
-              <div class="flex-2 text-right">
-                <div><small class="text-gray-500">{{date | date:'dd MMMM'}}</small></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--Chat visible-->
-        <div class="col-span-2 flex h-300 overflow-y-auto rounded bg-white dark:bg-green-400">
-          <div class="w-full">
-            <div class="flex-3">
-              <h2 class="text-xl py-1 mb-8 border-b-2 border-gray-200">Chatting with <b>Team_17_Holy_Hack</b></h2>
-            </div>
-            <div class="flex-1">
-              <div class=" mb-4 flex">
-                <div class="flex-2">
-                  <div class="w-12 h-12 relative">
-                    <img class="w-12 h-12 rounded-full mx-auto" src="assets/img.jpg" alt="chat-user" />
-                    <span class="absolute w-4 h-4 bg-gray-400 rounded-full right-0 bottom-0 border-2 border-white"></span>
-                  </div>
-                </div>
-                <div class="flex-1 px-2">
-                  <div class="inline-block bg-gray-300 rounded-full p-2 px-6 text-gray-700">
-                    <span>Hey there. We would like to invite you over to our office for a visit. How about it?</span>
-                  </div>
-                  <div class="pl-4"><small class="text-gray-500">{{date | date:'dd MMMM'}}</small></div>
-                </div>
-              </div>
-              <div class="me-0 mb-4 flex text-right">
-                <div class="flex-1 px-2">
-                  <div class="inline-block bg-blue-600 rounded-full p-2 px-6 text-white">
-                    <span>It's like a dream come true</span>
-                  </div>
-                  <div class="pr-4"><small class="text-gray-500">{{date |date: 'dd MMMM'}}</small></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    <div class="flex items-center justify-center h-28">
-      <!--Send message area change it with something else-->
-      <div class="flex bg-white shadow rounded-lg w-full">
-        <div class="flex-3 flex content-center items-center text-center p-4 pr-0">
-          <span class="block text-center text-gray-400 hover:text-gray-800">
-            <svg fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" class="h-6 w-6"><path d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-          </span>
-        </div>
-        <div class="flex-1 flex items-center justify-center ml-2">
-          <input type="text" id="default-input" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Type your message...">
-        </div>
-        <div class="flex-2 w-32 p-2 flex content-center items-center">
-          <div class="flex-1 text-center">
-            <span class="text-gray-400 hover:text-gray-800">
-              <span class="inline-block align-text-bottom">
-                <svg fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" class="w-6 h-6"><path d="M15.172 7l-6.586 6.586a2 2 0 102.828 2.828l6.414-6.586a4 4 0 00-5.656-5.656l-6.415 6.585a6 6 0 108.486 8.486L20.5 13"></path></svg>
-              </span>
-            </span>
-          </div>
-          <div class="flex-1">
-            <button class="bg-blue-400 w-10 h-10 rounded-full inline-block">
-              <span class="inline-block align-text-bottom">
-                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" class="w-4 h-4 text-white"><path d="M5 13l4 4L19 7"></path></svg>
-              </span>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
+<app-navigation></app-navigation>
 
 <router-outlet></router-outlet>
