--- a/Radix/src/app/modules/chat-component/chat-component.component.html
+++ b/Radix/src/app/modules/chat-component/chat-component.component.html
@@ -90,11 +90,14 @@
         </div>
         <div class="flex-2 w-32 p-2 flex content-center items-center">
           <div class="flex-1 text-center">
-            <span class="text-gray-400 hover:text-gray-800">
-              <span class="inline-block align-text-bottom">
-                <svg fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" class="w-6 h-6"><path d="M15.172 7l-6.586 6.586a2 2 0 102.828 2.828l6.414-6.586a4 4 0 00-5.656-5.656l-6.415 6.585a6 6 0 108.486 8.486L20.5 13"></path></svg>
-              </span>
-            </span>
+            <div class="relative">
+              <input style="opacity: 0;" class="block w-full text-sm border rounded-lg cursor-pointer pl-10" id="file_input" type="file">
+              <label for="file_input" class="absolute left-2 top-1/2 transform -translate-y-1/2 cursor-pointer">
+                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" class="w-6 h-6">
+                  <path d="M15.172 7l-6.586 6.586a2 2 0 102.828 2.828l6.414-6.586a4 4 0 00-5.656-5.656l-6.415 6.585a6 6 0 108.486 8.486L20.5 13"></path>
+                </svg>
+              </label>
+            </div>
           </div>
           <div class="flex-1">
             <button class="bg-blue-400 w-10 h-10 rounded-full inline-block">
