--- a/Radix/src/app/modules/chat-component/chat-component.component.html
+++ b/Radix/src/app/modules/chat-component/chat-component.component.html
@@ -60,23 +60,30 @@
               </div>
               <div class="flex-1 px-2">
                 <div class="inline-block bg-gray-300 rounded-full p-2 px-6 text-gray-700">
-                  <span>Hey there. We would like to invite you over to our office for a visit. How about it?</span>
+                  <span>Hi there! How can I help you today?</span>
                 </div>
-                <div class="pl-4"><small class="text-gray-500">{{date | date:'dd MMMM'}}</small></div>
+                <div class="pl-4"><small class="text-gray-500">{{hour}}</small></div>
               </div>
             </div>
-            <div class="me-0 mb-4 flex text-right">
-              <div class="flex-1 px-2">
+            <div *ngFor="let message of messages" class="me-0 mb-4 flex text-right">
+              <div class="flex-1 px-2" *ngIf="!isImageUrl(message)">
                 <div class="inline-block bg-blue-600 rounded-full p-2 px-6 text-white">
-                  <span>It's like a dream come true</span>
+                  <span>{{message}}</span>
                 </div>
-                <div class="pr-4"><small class="text-gray-500">{{date |date: 'dd MMMM'}}</small></div>
+                <div class="pr-4"><small class="text-gray-500">{{hour }}</small></div>
+              </div>
+              <div class="flex-1 px-2" *ngIf="isImageUrl(message)">
+                <div class="inline-block bg-blue-600 rounded-l p-2 px-6 text-white">
+                  <img [src]="message" class="w-fit h-fit" alt="Image Message">
+                </div>
+                <div class="pr-4"><small class="text-gray-500">{{hour }}</small></div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
     <div class="flex items-center justify-center h-28">
       <!--Send message area change it with something else-->
       <div class="flex bg-white shadow rounded-lg w-full">
@@ -86,12 +93,12 @@
           </span>
         </div>
         <div class="flex-1 flex items-center justify-center ml-2">
-          <input type="text" id="default-input" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Type your message...">
+          <input type="text" [(ngModel)]="newMessage" id="default-input" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Type your message...">
         </div>
         <div class="flex-2 w-32 p-2 flex content-center items-center">
           <div class="flex-1 text-center">
             <div class="relative">
-              <input style="opacity: 0;" class="block w-full text-sm border rounded-lg cursor-pointer pl-10" id="file_input" type="file">
+              <input style="opacity: 0;" (change)="readURL($event)" class="block w-full text-sm border rounded-lg cursor-pointer pl-10" id="file_input" type="file">
               <label for="file_input" class="absolute left-2 top-1/2 transform -translate-y-1/2 cursor-pointer">
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" class="w-6 h-6">
                   <path d="M15.172 7l-6.586 6.586a2 2 0 102.828 2.828l6.414-6.586a4 4 0 00-5.656-5.656l-6.415 6.585a6 6 0 108.486 8.486L20.5 13"></path>
@@ -100,7 +107,7 @@
             </div>
           </div>
           <div class="flex-1">
-            <button class="bg-blue-400 w-10 h-10 rounded-full inline-block">
+            <button (click)="sendMessage()" class="bg-blue-400 w-10 h-10 rounded-full inline-block">
               <span class="inline-block align-text-bottom">
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" class="w-4 h-4 text-white"><path d="M5 13l4 4L19 7"></path></svg>
               </span>
